eks/internet-gateway.tf
resource "aws_internet_gateway" "terraform_igw" {
  vpc_id = aws_vpc.terraform_vpc.id
  tags = {
    "Name" = "terraform_igw"
  }
}
